[package]
name = "leptos_tea"
version = "0.2.0"
edition = "2021"
description = "The Elm Architecture for leptos."
license = "MIT"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
homepage = "https://github.com/jquesada2016/leptos-tea"
repository = "https://github.com/jquesada2016/leptos-tea"
documentation = "https://docs.rs/leptos_tea"
keywords = ["leptos", "web", "framework", "reactive", "isomorphic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stable = []

[dependencies]
futures = "0.3"
leptos_reactive = "0.2"
leptos_tea_macros = { version = "0.2.0", path = "../macros" }
smallvec = "1"

[dev-dependencies]
leptos = "0.2"