[package]
name = "leptos_tea"
version = "0.5.1"
edition = "2021"
description = "The Elm Architecture for leptos."
license = "MIT"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
homepage = "https://github.com/jquesada2016/leptos-tea"
repository = "https://github.com/jquesada2016/leptos-tea"
documentation = "https://docs.rs/leptos_tea"
keywords = ["leptos", "web", "framework", "reactive", "isomorphic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = ["leptos_reactive/nightly"]

[dependencies]
futures = "0.3"
leptos_reactive = "0.4"
leptos_tea_macros = { version = "0.5", path = "../macros" }
smallvec = "1"
tracing = "0.1"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
leptos = { version = "0.4", features = ["nightly"] }