[package]
name = "leptos_tea_macros"
version = "0.5.0"
description = "Macros used by leptos_tea."
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }